--- a/Nic-vs-Nic2-in-TTT-round-1.html
+++ b/Nic-vs-Nic2-in-TTT-round-1.html
@@ -8,3 +8,13 @@
 <tr><td><img src=gray32.png></td><td><img src=gray32.png></td><td><img src=gray32.png></td></tr>
 </table><br>
 <h3>X to move.</h3>
+<h2>Move is by X to [0, 0]</h2>
+<h2>Nic says: I need to think of something appropriate.
+Well, I guess I can say that this move is probably illegal.</h2>
+<table>
+<tr><td><img src=gray32.png></td><td><img src=gray32.png></td><td><img src=gray32.png></td></tr>
+<tr><td><img src=gray32.png></td><td><img src=gray32.png></td><td><img src=gray32.png></td></tr>
+<tr><td><img src=gray32.png></td><td><img src=gray32.png></td><td><img src=gray32.png></td></tr>
+</table><br>
+<h2>Invalid Player Token in Move: ' '</h2>
+</body></html>
