--- a/Nic-vs-Nic2-in-TTT-round-1.html
+++ b/Nic-vs-Nic2-in-TTT-round-1.html
@@ -8,21 +8,21 @@
 <tr><td><img src=gray32.png></td><td><img src=gray32.png></td><td><img src=gray32.png></td></tr>
 </table><br>
 <h3>X to move.</h3>
-<h2>Move is by X to [0, 0]</h2>
+<h2>Move is by X to [1, 1]</h2>
 <h2>Nic says: I need to think of something appropriate.
 Well, I guess I can say that this move is probably illegal.</h2>
 <table>
-<tr><td><img src=X32.png></td><td><img src=gray32.png></td><td><img src=gray32.png></td></tr>
 <tr><td><img src=gray32.png></td><td><img src=gray32.png></td><td><img src=gray32.png></td></tr>
+<tr><td><img src=gray32.png></td><td><img src=X32.png></td><td><img src=gray32.png></td></tr>
 <tr><td><img src=gray32.png></td><td><img src=gray32.png></td><td><img src=gray32.png></td></tr>
 </table><br>
 <h3>O to move.</h3>
-<h2>Move is by O to [1, 1]</h2>
+<h2>Move is by O to [0, 0]</h2>
 <h2>Nic2 says: I need to think of something appropriate.
 Well, I guess I can say that this move is probably illegal.</h2>
 <table>
-<tr><td><img src=X32.png></td><td><img src=gray32.png></td><td><img src=gray32.png></td></tr>
-<tr><td><img src=gray32.png></td><td><img src=O32.png></td><td><img src=gray32.png></td></tr>
+<tr><td><img src=O32.png></td><td><img src=gray32.png></td><td><img src=gray32.png></td></tr>
+<tr><td><img src=gray32.png></td><td><img src=X32.png></td><td><img src=gray32.png></td></tr>
 <tr><td><img src=gray32.png></td><td><img src=gray32.png></td><td><img src=gray32.png></td></tr>
 </table><br>
 <h3>X to move.</h3>
@@ -30,36 +30,45 @@ Well, I guess I can say that this move is probably illegal.</h2>
 <h2>Nic says: I need to think of something appropriate.
 Well, I guess I can say that this move is probably illegal.</h2>
 <table>
-<tr><td><img src=X32.png></td><td><img src=gray32.png></td><td><img src=X32.png></td></tr>
-<tr><td><img src=gray32.png></td><td><img src=O32.png></td><td><img src=gray32.png></td></tr>
+<tr><td><img src=O32.png></td><td><img src=gray32.png></td><td><img src=X32.png></td></tr>
+<tr><td><img src=gray32.png></td><td><img src=X32.png></td><td><img src=gray32.png></td></tr>
 <tr><td><img src=gray32.png></td><td><img src=gray32.png></td><td><img src=gray32.png></td></tr>
-</table><br>
-<h3>O to move.</h3>
-<h2>Move is by O to [2, 1]</h2>
-<h2>Nic2 says: I need to think of something appropriate.
-Well, I guess I can say that this move is probably illegal.</h2>
-<table>
-<tr><td><img src=X32.png></td><td><img src=gray32.png></td><td><img src=X32.png></td></tr>
-<tr><td><img src=gray32.png></td><td><img src=O32.png></td><td><img src=gray32.png></td></tr>
-<tr><td><img src=gray32.png></td><td><img src=O32.png></td><td><img src=gray32.png></td></tr>
-</table><br>
-<h3>X to move.</h3>
-<h2>Move is by X to [2, 0]</h2>
-<h2>Nic says: I need to think of something appropriate.
-Well, I guess I can say that this move is probably illegal.</h2>
-<table>
-<tr><td><img src=X32.png></td><td><img src=gray32.png></td><td><img src=X32.png></td></tr>
-<tr><td><img src=gray32.png></td><td><img src=O32.png></td><td><img src=gray32.png></td></tr>
-<tr><td><img src=X32.png></td><td><img src=O32.png></td><td><img src=gray32.png></td></tr>
 </table><br>
 <h3>O to move.</h3>
 <h2>Move is by O to [0, 1]</h2>
 <h2>Nic2 says: I need to think of something appropriate.
 Well, I guess I can say that this move is probably illegal.</h2>
 <table>
-<tr><td><img src=X32.png></td><td><img src=O32.png></td><td><img src=X32.png></td></tr>
-<tr><td><img src=gray32.png></td><td><img src=O32.png></td><td><img src=gray32.png></td></tr>
-<tr><td><img src=X32.png></td><td><img src=O32.png></td><td><img src=gray32.png></td></tr>
+<tr><td><img src=O32.png></td><td><img src=O32.png></td><td><img src=X32.png></td></tr>
+<tr><td><img src=gray32.png></td><td><img src=X32.png></td><td><img src=gray32.png></td></tr>
+<tr><td><img src=gray32.png></td><td><img src=gray32.png></td><td><img src=gray32.png></td></tr>
 </table><br>
-<h2>Win for O at [0][1] in direction (1, 0)</h2>
+<h3>X to move.</h3>
+<h2>Move is by X to [1, 2]</h2>
+<h2>Nic says: I need to think of something appropriate.
+Well, I guess I can say that this move is probably illegal.</h2>
+<table>
+<tr><td><img src=O32.png></td><td><img src=O32.png></td><td><img src=X32.png></td></tr>
+<tr><td><img src=gray32.png></td><td><img src=X32.png></td><td><img src=X32.png></td></tr>
+<tr><td><img src=gray32.png></td><td><img src=gray32.png></td><td><img src=gray32.png></td></tr>
+</table><br>
+<h3>O to move.</h3>
+<h2>Move is by O to [1, 0]</h2>
+<h2>Nic2 says: I need to think of something appropriate.
+Well, I guess I can say that this move is probably illegal.</h2>
+<table>
+<tr><td><img src=O32.png></td><td><img src=O32.png></td><td><img src=X32.png></td></tr>
+<tr><td><img src=O32.png></td><td><img src=X32.png></td><td><img src=X32.png></td></tr>
+<tr><td><img src=gray32.png></td><td><img src=gray32.png></td><td><img src=gray32.png></td></tr>
+</table><br>
+<h3>X to move.</h3>
+<h2>Move is by X to [2, 0]</h2>
+<h2>Nic says: I need to think of something appropriate.
+Well, I guess I can say that this move is probably illegal.</h2>
+<table>
+<tr><td><img src=O32.png></td><td><img src=O32.png></td><td><img src=X32.png></td></tr>
+<tr><td><img src=O32.png></td><td><img src=X32.png></td><td><img src=X32.png></td></tr>
+<tr><td><img src=X32.png></td><td><img src=gray32.png></td><td><img src=gray32.png></td></tr>
+</table><br>
+<h2>Win for X at [2][1] in direction (-1, 1)</h2>
 </body></html>
