--- a/Regina-George-vs-Regina-GeorgeOpponent-in-TTT-round-1.html
+++ b/Regina-George-vs-Regina-GeorgeOpponent-in-TTT-round-1.html
@@ -1,7 +1,7 @@
 
 <html><head><title>K-in-a-Row game</title></head>
 <body>
-<h1>Game Report: Nic versus Nic2 in TTT, round 1 </h1>
+<h1>Game Report: Regina George versus Regina GeorgeOpponent in TTT, round 1 </h1>
 <table>
 <tr><td><img src=gray32.png></td><td><img src=gray32.png></td><td><img src=gray32.png></td></tr>
 <tr><td><img src=gray32.png></td><td><img src=gray32.png></td><td><img src=gray32.png></td></tr>
@@ -9,7 +9,7 @@
 </table><br>
 <h3>X to move.</h3>
 <h2>Move is by X to [1, 1]</h2>
-<h2>Nic says: That's adorable, you think you're *winning* at tic-tac-toe?  
+<h2>Regina George says: That's a *fetch* game, but honey,  I'm already winning, aren't I?
 </h2>
 <table>
 <tr><td><img src=gray32.png></td><td><img src=gray32.png></td><td><img src=gray32.png></td></tr>
@@ -18,7 +18,7 @@
 </table><br>
 <h3>O to move.</h3>
 <h2>Move is by O to [0, 0]</h2>
-<h2>Nic2 says: That's cute, you think you can beat me at tic-tac-toe?  Darling, I'm already three steps ahead, and you're still trying to figure out which X to place.
+<h2>Regina GeorgeOpponent says: That's a *fetch*ing pathetic attempt at tic-tac-toe;  even *I* could beat that.
 </h2>
 <table>
 <tr><td><img src=O32.png></td><td><img src=gray32.png></td><td><img src=gray32.png></td></tr>
@@ -27,7 +27,7 @@
 </table><br>
 <h3>X to move.</h3>
 <h2>Move is by X to [0, 2]</h2>
-<h2>Nic says: That's *so* fetch, but even *I* can see this tic-tac-toe game is about as exciting as watching paint dry.
+<h2>Regina George says: That's cute, you think you can win at tic-tac-toe?  Get in line, darling, because even *my* game of Candy Land is more challenging than this.
 </h2>
 <table>
 <tr><td><img src=O32.png></td><td><img src=gray32.png></td><td><img src=X32.png></td></tr>
@@ -36,7 +36,7 @@
 </table><br>
 <h3>O to move.</h3>
 <h2>Move is by O to [0, 1]</h2>
-<h2>Nic2 says: That's cute, you think you can beat me at tic-tac-toe?  Fetch me a more challenging opponent, darling.
+<h2>Regina GeorgeOpponent says: That's as exciting as watching paint dry, darling, even *I* could win this.
 </h2>
 <table>
 <tr><td><img src=O32.png></td><td><img src=O32.png></td><td><img src=X32.png></td></tr>
@@ -45,7 +45,7 @@
 </table><br>
 <h3>X to move.</h3>
 <h2>Move is by X to [1, 2]</h2>
-<h2>Nic says: That's cute, you think you can beat me at tic-tac-toe?  Darling, I've conquered far more complicated games than this.
+<h2>Regina George says: That tic-tac-toe board is as pathetic as your attempts at friendship, darling.
 </h2>
 <table>
 <tr><td><img src=O32.png></td><td><img src=O32.png></td><td><img src=X32.png></td></tr>
@@ -54,7 +54,7 @@
 </table><br>
 <h3>O to move.</h3>
 <h2>Move is by O to [1, 0]</h2>
-<h2>Nic2 says: That's cute, you think you can *actually* win against me in tic-tac-toe?  
+<h2>Regina GeorgeOpponent says: That's *so* fetch, this tic-tac-toe game; it's like, totally obvious who's going to win.
 </h2>
 <table>
 <tr><td><img src=O32.png></td><td><img src=O32.png></td><td><img src=X32.png></td></tr>
@@ -63,7 +63,7 @@
 </table><br>
 <h3>X to move.</h3>
 <h2>Move is by X to [2, 0]</h2>
-<h2>Nic says: That tic-tac-toe board is so basic, even *I* could win, and you know that's saying something.
+<h2>Regina George says: That tic-tac-toe board is so pathetically simple, even *I* could win, and you know I'm far too fabulous for such pedestrian games.
 </h2>
 <table>
 <tr><td><img src=O32.png></td><td><img src=O32.png></td><td><img src=X32.png></td></tr>
