--- a/Regina-George-vs-Regina-GeorgeOpponent-in-TTT-round-1.html
+++ b/Regina-George-vs-Regina-GeorgeOpponent-in-TTT-round-1.html
@@ -9,7 +9,7 @@
 </table><br>
 <h3>X to move.</h3>
 <h2>Move is by X to [1, 1]</h2>
-<h2>Regina George says: That's a *fetch* game, but honey,  I'm already winning, aren't I?
+<h2>Regina George says: That tic-tac-toe board is so pathetically simple, even *I* could win, and I'm known for my *complicated* schemes.
 </h2>
 <table>
 <tr><td><img src=gray32.png></td><td><img src=gray32.png></td><td><img src=gray32.png></td></tr>
@@ -18,7 +18,7 @@
 </table><br>
 <h3>O to move.</h3>
 <h2>Move is by O to [0, 0]</h2>
-<h2>Regina GeorgeOpponent says: That's a *fetch*ing pathetic attempt at tic-tac-toe;  even *I* could beat that.
+<h2>Regina GeorgeOpponent says: That's the most *basic* tic-tac-toe game I've ever seen; even *I* could win, and I'm practically a queen.
 </h2>
 <table>
 <tr><td><img src=O32.png></td><td><img src=gray32.png></td><td><img src=gray32.png></td></tr>
@@ -27,7 +27,7 @@
 </table><br>
 <h3>X to move.</h3>
 <h2>Move is by X to [0, 2]</h2>
-<h2>Regina George says: That's cute, you think you can win at tic-tac-toe?  Get in line, darling, because even *my* game of Candy Land is more challenging than this.
+<h2>Regina George says: That's adorable, you think you can *actually* beat me at tic-tac-toe?  
 </h2>
 <table>
 <tr><td><img src=O32.png></td><td><img src=gray32.png></td><td><img src=X32.png></td></tr>
@@ -36,7 +36,7 @@
 </table><br>
 <h3>O to move.</h3>
 <h2>Move is by O to [0, 1]</h2>
-<h2>Regina GeorgeOpponent says: That's as exciting as watching paint dry, darling, even *I* could win this.
+<h2>Regina GeorgeOpponent says: That's cute, you think you can *actually* win against me in tic-tac-toe?  Darling, fetch me my diamond-encrusted game board.
 </h2>
 <table>
 <tr><td><img src=O32.png></td><td><img src=O32.png></td><td><img src=X32.png></td></tr>
@@ -45,7 +45,7 @@
 </table><br>
 <h3>X to move.</h3>
 <h2>Move is by X to [1, 2]</h2>
-<h2>Regina George says: That tic-tac-toe board is as pathetic as your attempts at friendship, darling.
+<h2>Regina George says: That's *so* fetch, this tic-tac-toe game...if fetch were a pathetically simple display of strategic ineptitude.
 </h2>
 <table>
 <tr><td><img src=O32.png></td><td><img src=O32.png></td><td><img src=X32.png></td></tr>
@@ -54,7 +54,7 @@
 </table><br>
 <h3>O to move.</h3>
 <h2>Move is by O to [1, 0]</h2>
-<h2>Regina GeorgeOpponent says: That's *so* fetch, this tic-tac-toe game; it's like, totally obvious who's going to win.
+<h2>Regina GeorgeOpponent says: That tic-tac-toe board is so basic, even *I* could win, and honey, that's saying something.
 </h2>
 <table>
 <tr><td><img src=O32.png></td><td><img src=O32.png></td><td><img src=X32.png></td></tr>
@@ -63,7 +63,7 @@
 </table><br>
 <h3>X to move.</h3>
 <h2>Move is by X to [2, 0]</h2>
-<h2>Regina George says: That tic-tac-toe board is so pathetically simple, even *I* could win, and you know I'm far too fabulous for such pedestrian games.
+<h2>Regina George says: That tic-tac-toe board is so basic, even *I* could win, and that's saying something.
 </h2>
 <table>
 <tr><td><img src=O32.png></td><td><img src=O32.png></td><td><img src=X32.png></td></tr>
