--- a/Regina-George-vs-Regina-GeorgeOpponent-in-TTT-round-1.html
+++ b/Regina-George-vs-Regina-GeorgeOpponent-in-TTT-round-1.html
@@ -8,66 +8,66 @@
 <tr><td><img src=gray32.png></td><td><img src=gray32.png></td><td><img src=gray32.png></td></tr>
 </table><br>
 <h3>X to move.</h3>
-<h2>Move is by X to [1, 1]</h2>
-<h2>Regina George says: That's *so* fetch, trying to beat me at tic-tac-toe;  I'm practically a grandmaster of this ridiculously simple game.
+<h2>Move is by X to [0, 0]</h2>
+<h2>Regina George says: OMG, you are SO going to regret that, because *I* totally would have won if it weren't for your, like, *totally* unfair, and obvious, and pathetically unskilled gameplay.
 </h2>
 <table>
+<tr><td><img src=X32.png></td><td><img src=gray32.png></td><td><img src=gray32.png></td></tr>
 <tr><td><img src=gray32.png></td><td><img src=gray32.png></td><td><img src=gray32.png></td></tr>
-<tr><td><img src=gray32.png></td><td><img src=X32.png></td><td><img src=gray32.png></td></tr>
-<tr><td><img src=gray32.png></td><td><img src=gray32.png></td><td><img src=gray32.png></td></tr>
-</table><br>
-<h3>O to move.</h3>
-<h2>Move is by O to [0, 0]</h2>
-<h2>Regina GeorgeOpponent says: That was... a game of tic-tac-toe.
-</h2>
-<table>
-<tr><td><img src=O32.png></td><td><img src=gray32.png></td><td><img src=gray32.png></td></tr>
-<tr><td><img src=gray32.png></td><td><img src=X32.png></td><td><img src=gray32.png></td></tr>
-<tr><td><img src=gray32.png></td><td><img src=gray32.png></td><td><img src=gray32.png></td></tr>
-</table><br>
-<h3>X to move.</h3>
-<h2>Move is by X to [0, 2]</h2>
-<h2>Regina George says: That's cute, you think you can *actually* win against me in tic-tac-toe?  
-</h2>
-<table>
-<tr><td><img src=O32.png></td><td><img src=gray32.png></td><td><img src=X32.png></td></tr>
-<tr><td><img src=gray32.png></td><td><img src=X32.png></td><td><img src=gray32.png></td></tr>
 <tr><td><img src=gray32.png></td><td><img src=gray32.png></td><td><img src=gray32.png></td></tr>
 </table><br>
 <h3>O to move.</h3>
 <h2>Move is by O to [0, 1]</h2>
-<h2>Regina GeorgeOpponent says: That was...a game of tic-tac-toe.
+<h2>Regina GeorgeOpponent says: Oh... I... I guess I lost.
 </h2>
 <table>
-<tr><td><img src=O32.png></td><td><img src=O32.png></td><td><img src=X32.png></td></tr>
-<tr><td><img src=gray32.png></td><td><img src=X32.png></td><td><img src=gray32.png></td></tr>
+<tr><td><img src=X32.png></td><td><img src=O32.png></td><td><img src=gray32.png></td></tr>
+<tr><td><img src=gray32.png></td><td><img src=gray32.png></td><td><img src=gray32.png></td></tr>
 <tr><td><img src=gray32.png></td><td><img src=gray32.png></td><td><img src=gray32.png></td></tr>
 </table><br>
 <h3>X to move.</h3>
-<h2>Move is by X to [1, 2]</h2>
-<h2>Regina George says: That's cute, you think you can win at tic-tac-toe?  Please.
+<h2>Move is by X to [0, 2]</h2>
+<h2>Regina George says: OMG, like, I totally didn't even *try* and I *still* would have won if Gretchen hadn't, like, *totally* messed up my strategy.
 </h2>
 <table>
-<tr><td><img src=O32.png></td><td><img src=O32.png></td><td><img src=X32.png></td></tr>
-<tr><td><img src=gray32.png></td><td><img src=X32.png></td><td><img src=X32.png></td></tr>
+<tr><td><img src=X32.png></td><td><img src=O32.png></td><td><img src=X32.png></td></tr>
+<tr><td><img src=gray32.png></td><td><img src=gray32.png></td><td><img src=gray32.png></td></tr>
 <tr><td><img src=gray32.png></td><td><img src=gray32.png></td><td><img src=gray32.png></td></tr>
 </table><br>
 <h3>O to move.</h3>
 <h2>Move is by O to [1, 0]</h2>
-<h2>Regina GeorgeOpponent says: It seems the game is... a draw.
+<h2>Regina GeorgeOpponent says: Oh, um, I... I guess I lost.
 </h2>
 <table>
-<tr><td><img src=O32.png></td><td><img src=O32.png></td><td><img src=X32.png></td></tr>
-<tr><td><img src=O32.png></td><td><img src=X32.png></td><td><img src=X32.png></td></tr>
+<tr><td><img src=X32.png></td><td><img src=O32.png></td><td><img src=X32.png></td></tr>
+<tr><td><img src=O32.png></td><td><img src=gray32.png></td><td><img src=gray32.png></td></tr>
+<tr><td><img src=gray32.png></td><td><img src=gray32.png></td><td><img src=gray32.png></td></tr>
+</table><br>
+<h3>X to move.</h3>
+<h2>Move is by X to [1, 1]</h2>
+<h2>Regina George says: Oh my god, you are so *fetch* not, I can't believe I lost to you, you pathetic loser.
+</h2>
+<table>
+<tr><td><img src=X32.png></td><td><img src=O32.png></td><td><img src=X32.png></td></tr>
+<tr><td><img src=O32.png></td><td><img src=X32.png></td><td><img src=gray32.png></td></tr>
+<tr><td><img src=gray32.png></td><td><img src=gray32.png></td><td><img src=gray32.png></td></tr>
+</table><br>
+<h3>O to move.</h3>
+<h2>Move is by O to [1, 2]</h2>
+<h2>Regina GeorgeOpponent says: Oh... I... I guess I lost.
+</h2>
+<table>
+<tr><td><img src=X32.png></td><td><img src=O32.png></td><td><img src=X32.png></td></tr>
+<tr><td><img src=O32.png></td><td><img src=X32.png></td><td><img src=O32.png></td></tr>
 <tr><td><img src=gray32.png></td><td><img src=gray32.png></td><td><img src=gray32.png></td></tr>
 </table><br>
 <h3>X to move.</h3>
 <h2>Move is by X to [2, 0]</h2>
-<h2>Regina George says: That tic-tac-toe board is about as exciting as watching paint dry, darling;  I've seen more strategic gameplay in a game of Candy Land.
+<h2>Regina George says: That tic-tac-toe board is so pathetically simple, even *I* could win, and darling, that's saying something.
 </h2>
 <table>
-<tr><td><img src=O32.png></td><td><img src=O32.png></td><td><img src=X32.png></td></tr>
-<tr><td><img src=O32.png></td><td><img src=X32.png></td><td><img src=X32.png></td></tr>
+<tr><td><img src=X32.png></td><td><img src=O32.png></td><td><img src=X32.png></td></tr>
+<tr><td><img src=O32.png></td><td><img src=X32.png></td><td><img src=O32.png></td></tr>
 <tr><td><img src=X32.png></td><td><img src=gray32.png></td><td><img src=gray32.png></td></tr>
 </table><br>
 <h2>Win for X at [2][1] in direction (-1, 1)</h2>
